# prl_ur5_robot_configuration

./: .gitignore  CMakeLists.txt  README.md  package.xml  standart_setup.yaml
config/: standart_setup.yaml
config/fixed_cameras/: cameras_config.yaml  dataset_collection.yaml
config/limits/: half_joint_limits.yaml
fixed_cameras/: dataset_collection.yaml
script/: setup_env.bash
urdf/: cylinder_tool.srdf.xacro  cylinder_tool.urdf.xacro  fake_gripper.srdf.xacro  fake_gripper.urdf.xacro  no_gripper.srdf.xacro  no_gripper.urdf.xacro
urdf/models/: cylinder_tool.stl  cylinder_tool_collision_base.stl  cylinder_tool_collision_body.stl  cylinder_tool_visual.stl
