<?xml version="1.0"?>
<package format="2">
  <name>prl_ur5_robot_configuration</name>
  <version>0.1.0</version>
  <description>The prl_ur5_robot_configuration package holds the current configuration of the bimanual UR5 robot.</description>

  <maintainer email="etienne.arlaud@inria.fr">Etienne Arlaud</maintainer>
  <author email="etienne.arlaud@inria.fr">Etienne Arlaud</author>

  <license>MIT</license>

  <url type="repository">https://github.com/inria-paris-robotic-lab/prl_ur5_robot_configuration</url>
  <url type="bugtracker">https://github.com/inria-paris-robotic-lab/prl_ur5_robot_configuration/issues</url>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
